--- a/about/index.html
+++ b/about/index.html
@@ -165,7 +165,7 @@
   </div>
   <div class="search-dropdown mobile">
     <div id="search-dropdown-mobile"></div>
-  </div><main class="container" data-page-style="normal"><article class="page single special">
+  </div><main class="container-reverse" data-page-style="normal"><article class="page single special">
     <div class="header"><h1 class="single-title animate__animated animate__pulse animate__faster">关于</h1></div><div
       class="content"
       id="content"
